--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@swc/cli": "^0.7.2",
     "@swc/core": "^1.11.21",
     "@swc/jest": "^0.2.37",
+    "@types/chance": "^1.1.6",
     "@types/jest": "^29.5.14",
     "@types/lodash": "^4.17.16",
     "@types/uuid": "^10.0.0",
@@ -28,6 +29,7 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "chance": "^1.1.12",
     "class-validator": "^0.14.1",
     "lodash": "^4.17.21",
     "uuid": "^11.1.0"
