--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/chance": "^1.1.6",
     "@types/jest": "^29.5.14",
     "@types/lodash": "^4.17.16",
+    "@types/sequelize": "^4.28.20",
     "@types/uuid": "^10.0.0",
     "jest": "^29.7.0",
     "ts-node": "^10.9.2",
@@ -32,6 +33,9 @@
     "chance": "^1.1.12",
     "class-validator": "^0.14.1",
     "lodash": "^4.17.21",
+    "sequelize": "^6.37.7",
+    "sequelize-typescript": "^2.1.6",
+    "sqlite3": "^5.1.7",
     "uuid": "^11.1.0"
   }
 }
