--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "chance": "^1.1.12",
     "class-validator": "^0.14.1",
+    "dotenv": "^16.5.0",
     "lodash": "^4.17.21",
     "sequelize": "^6.37.7",
     "sequelize-typescript": "^2.1.6",
