--- a/package.json
+++ b/package.json
@@ -21,12 +21,17 @@
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/sequelize": "^11.0.0",
     "chance": "^1.1.12",
     "class-validator": "^0.14.1",
     "dotenv": "^16.5.0",
+    "joi": "^17.13.3",
     "lodash": "^4.17.21",
+    "mysql2": "^3.14.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "sequelize": "^6.37.7",
